--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>Sign up</h1>
-    <form action="">
+    <!-- route and method -->
+    <form action="/register" method = "POST">
       <div>
         <label for="username">Enter Username</label>
         <input
@@ -24,6 +25,7 @@
           placeholder="password"
         />
       </div>
+      <button>Submit</button>
     </form>
   </body>
 </html>
